--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
+btleplug = { version = "0.10", features = ["serde"] }
