--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.32.0", features = ["macros", "sync", "rt-multi-thread"] }
+tokio = { version = "1.32.0", features = ["macros", "sync", "rt-multi-thread", "io-std"] }
 tokio-stream = "0.1.14"
+tokio-util = { version = "0.7.9", features = ["codec"] }
 warp = "0.3.6"
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
-btleplug = { version = "0.10", features = ["serde"] }
+btleplug = { version = "0.11.1", features = ["serde"] }
