--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -1,11 +1,13 @@
 name: Rust
 
 on:
-  push:
-    branches: [ "main" ]
+  #push:
+  #  branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  release:
+    types: [created]
+    
 env:
   CARGO_TERM_COLOR: always
 
