--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -17,7 +17,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
     - name: Install lidbus
       run: sudo apt install libdbus-1-dev pkg-config
     - name: Build
