--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -1,12 +1,14 @@
 name: Rust
 
 on:
+  workflow_dispatch:
   #push:
   #  branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   release:
     types: [created]
+
     
 env:
   CARGO_TERM_COLOR: always
